--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.12",
+    "expo-clipboard": "~4.0.1",
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-modal": "^13.0.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
