--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native": "0.70.5",
     "react-native-modal": "^13.0.1",
     "react-native-toast-message": "^2.1.5",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
