--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-top-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "axios": "^1.2.6",
     "expo": "~47.0.12",
     "expo-clipboard": "~4.0.1",
     "expo-linear-gradient": "^12.0.1",
@@ -20,10 +21,11 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-screens": "~3.18.0",
-    "react-native-safe-area-context": "4.4.1"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
