--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "axios": "^1.2.6",
+    "base-64": "^1.0.0",
     "expo": "~47.0.12",
     "expo-clipboard": "~4.0.1",
     "expo-linear-gradient": "^12.0.1",
@@ -25,7 +26,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "react-use-cart": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
